# Smart-Finance-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
backend/: main.py  mcp_client.py  pyproject.toml  requirements.txt  session_memory.py  system_prompts.py
finance-ai-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
finance-ai-frontend/src/: App.css  App.jsx  index.css
finance-ai-frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  MessageBubble.jsx  Sidebar.jsx
finance-ai-frontend/src/hooks/: useChat.js
mcp_servers/chart_server/: logger.py  main.py  pyproject.toml  requirements.txt  utils.py
mcp_servers/chart_server/tools/: __init__.py  comparison_chart.py  line_chart.py
mcp_servers/expense_server/: logger.py  main.py  pyproject.toml  utils.py
mcp_servers/expense_server/tools/: __init__.py  emergency_fund.py  investment_capacity.py  retirement_affordability.py  savings.py
mcp_servers/investment_server/: logger.py  main.py  pyproject.toml
mcp_servers/investment_server/tools/: __init__.py  lump_sum_simulation.py  portfolio_simulation.py  sip_simulation.py  step_up_sip.py
mcp_servers/math_server/: logger.py  main.py  pyproject.toml  utils.py
mcp_servers/math_server/tools/: __init__.py  advanced.py  inflation.py  loan.py  retirement.py  sip.py
